# bazel_python_repro

./: .gitignore  BUILD.bazel  MODULE.bazel  README.bazel.md  gazelle_python.yaml  pyproject.toml
.aspect/cli/: config.yaml
app/: BUILD.bazel  __main__.py  cow_test.py
requirements/: BUILD.bazel  README.md  all.in  all.txt  runtime.txt  test.in  test.txt
tools/lint/: BUILD.bazel  linters.bzl
