bazel_dep(name = "aspect_bazel_lib", version = "2.7.7")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc3")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "rules_multitool", version = "0.7.1")
bazel_dep(name = "rules_python", version = "0.33.1")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.33.1")
bazel_dep(name = "aspect_rules_py", version = "0.7.3")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//requirements:runtime.txt",
)
pip.parse(
    hub_name = "pip.test",
    python_version = "3.12",
    requirements_lock = "//requirements:test.txt",
)
use_repo(pip, "pip", "pip.test")
