load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_pytest_main", "py_test")

py_pytest_main(
    name = "__test__",
    deps = ["@pip//pytest"],
)

py_binary(
    name = "app_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//cowsay",
        "@pip//requests",
    ],
)

py_test(
    name = "app_test",
    srcs = [
        "cow_test.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        "@pip//python_dotenv",
    ],
)
